fix: mobile overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -32,13 +32,13 @@ $bg-purple: #b168e8;
     @extend %bg-shared;
     transition: ease-in-out .8s, opacity ease-in-out .8s;
     width: 100vw;
-    height: calc(100vh - 80px);
-    
+    height: calc(100% - 70px);
+        overflow-y: hidden;
+
 }
 
 .start-page{
    display: flex;
-    height: calc(100vh - 80px);
 
 }
 
